# adapter-in-rest/src/main/java/ru/vikulinva/orderservice/adapter/in/rest/controller/OrderController.java
@@ -6,13 +6,16 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.vikulinva.hexagonal.InboundAdapter;
 import ru.vikulinva.orderservice.adapter.in.rest.generated.api.OrdersApi;
+import ru.vikulinva.orderservice.adapter.in.rest.generated.model.CancelOrderRequest;
 import ru.vikulinva.orderservice.adapter.in.rest.generated.model.CreateOrderRequest;
 import ru.vikulinva.orderservice.adapter.in.rest.generated.model.Order;
 import ru.vikulinva.orderservice.adapter.in.rest.mapper.OrderRestMapper;
 import ru.vikulinva.orderservice.adapter.in.rest.mapper.RequestHashCalculator;
 import org.springframework.security.access.prepost.PreAuthorize;
 import ru.vikulinva.orderservice.adapter.in.rest.security.AuthenticatedCustomer;
+import ru.vikulinva.orderservice.domain.valueobject.CancellationReason;
 import ru.vikulinva.orderservice.domain.valueobject.OrderId;
+import ru.vikulinva.orderservice.usecase.command.CancelOrderUseCase;
 import ru.vikulinva.orderservice.usecase.command.ConfirmOrderUseCase;
 import ru.vikulinva.orderservice.usecase.command.CreateOrderUseCase;
 import ru.vikulinva.usecase.UseCaseDispatcher;
@@ -65,6 +68,16 @@ public class OrderController implements OrdersApi {
     public ResponseEntity<Order> confirmOrder(UUID id) {
         var customerId = authenticatedCustomer.currentCustomerId();
         var useCase = new ConfirmOrderUseCase(OrderId.of(id), customerId);
+        var order = useCaseDispatcher.dispatch(useCase);
+        return ResponseEntity.ok(mapper.toRest(order));
+    }
+
+    @Override
+    @PreAuthorize("hasRole('customer') or hasRole('admin')")
+    public ResponseEntity<Order> cancelOrder(UUID id, CancelOrderRequest request) {
+        var customerId = authenticatedCustomer.currentCustomerId();
+        var reason = new CancellationReason(request.getReasonCode(), request.getComment());
+        var useCase = new CancelOrderUseCase(OrderId.of(id), customerId, reason);
         var order = useCaseDispatcher.dispatch(useCase);
         return ResponseEntity.ok(mapper.toRest(order));
     }
